tests/negative/test_owning_asgn_no_drop_elem_propagated.orb
data Foo {
    x:i32
} (fnc dropFoo (val:Foo::noDrop) () {});

fnc bar (f:(Foo 2)::noDrop) () {
    sym f0:Foo;
    = f0 ([] f 0);
};

fnc main () () {};